# POC_Airflow_Medallion

./: README.md  docker-compose.yml  pyproject.toml
dags/: bronze_dag.py  sales.py  silver_dag.py
scripts/: bronze.py  checkpoint.py  database.py  generic_pipeline.py  gerar_dados_bronze.py
scripts/customers/: silver.py
scripts/product/: silver.py
scripts/sales/: bronze.py  gold.py  silver.py
