[project]
name = "poc-airflow-medallion"
version = "0.1.0"
description = ""
authors = [
    {name = "angelogagno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker (>=40.15.0,<41.0.0)",
    "duckdb (>=1.5.2,<2.0.0)",
    "pandas (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
